@@ -10,6 +10,8 @@ CHANGELOG
 * Added: Text color option for course certificate.
 * Added: Categories argument to [course_list] shortcode to filter courses.
 * Added: HTML rel attribute to next and previous buttons.
+* Added: Password strength meter on student profile
+* Added: The ability to disable the strength meter in the enrollment pup-up.
 
 * Improved: Image display.
 
